--- a/server/package.json
+++ b/server/package.json
@@ -21,19 +21,16 @@
   "homepage": "https://github.com/DirtyRonin/ContainerLoadingProblem#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.21.3",
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/validator": "^13.7.4",
     "nodemon": "^2.0.19",
-    "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "typescript": "^4.7.4"
   }
 }
