--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_PATH=./build node build/index.js",
+    "start": "NODE_PATH=./build node build/server.js",
     "build": "tsc -p .",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,16 +20,20 @@
   },
   "homepage": "https://github.com/DirtyRonin/ContainerLoadingProblem#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mariadb": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
-    "sequelize-typescript": "^2.1.3"
+    "sequelize-typescript": "^2.1.3",
+    "strong-error-handler": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "@types/validator": "^13.7.4",
     "nodemon": "^2.0.19",
+    "sequelize-cli": "^6.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
