--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -28,7 +27,7 @@
     "hot": "webpack-dev-server",
     "dev": "npx webpack serve --mode development",
     "build": "npx webpack",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,8 +53,11 @@
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.6",
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
