--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/DirtyRonin/ContainerLoadingProblem#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mariadb": "^3.0.0",
     "reflect-metadata": "^0.1.13",
