--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "hot": "webpack-dev-server",
     "dev": "npx webpack serve --mode development",
     "build": "npx webpack",
-    "test": "jest",
+    "test": "npx jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -55,8 +55,11 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^28.1.6",
     "babel-loader": "^8.2.5",
+    "esbuild": "^0.14.51",
+    "esbuild-jest": "^0.5.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
+    "jest-cli": "^28.1.3",
     "ts-jest": "^28.0.7",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
