--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "immer": "^9.0.15",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
+    "ts-simple-nameof": "^1.3.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
