--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "immer": "^9.0.15",
+    "immer-reducer": "^0.7.13",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
