--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "outDir": "./dist/",
     "noImplicitAny": true,
+    "types": ["reflect-metadata"],
     "module": "commonjs",
     "jsx": "react",
     "allowJs": true,
@@ -22,6 +23,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "sourceMap": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src"
