changed to mongo db serverside

--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,13 @@
 PORT=3000
 
-DB_PORT=3306
-DB_ROOT_PASSWORD="root"
+DB_ROOT_PASSWORD="cheapTrick"
+# DB_HOST='localhost'
 DB_HOST='localhost'
 DB_USERNAME='root'
 DB_PASSWORD="root"
 DB_DATABASE="truckloading"
 
+DB_PORT=27017
+MONGO_INITDB_DATABASE="truckloading"
+MONGO_INITDB_ROOT_USERNAME="root"
+MONGO_INITDB_ROOT_PASSWORD="cheapTrick"
