--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_PATH=./build node build/server.js",
     "build": "tsc -p .",
-    "dev": "nodemon server.ts"
+    "dev": "nodemon -r dotenv/config server.ts"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,10 @@
   "homepage": "https://github.com/DirtyRonin/ContainerLoadingProblem#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mariadb": "^3.0.0",
+    "mongoose": "^6.5.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
     "sequelize-typescript": "^2.1.3",
