--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
     "sequelize-typescript": "^2.1.3",
-    "strong-error-handler": "^4.0.0"
+    "strong-error-handler": "^4.0.0",
+    "ts-simple-nameof": "^1.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
